# service/documentation/swagger.json
@@ -73,17 +73,35 @@
               "400": {
                 "description": "Ocorreu algum tipo de erro ao tentar criar um novo documento."
               },
+              "401": {
+                "description":"O request não pôde ser completado porque o usuário existe mas não possui autorização para continuar."
+              },
               "403": {
                 "description": "O request não pode ser completado porque o body não foi preenchido ou foi preenchido incorretamente."
+              },
+              "404": {
+                "description":"O request não pôde ser completado porque o usuário não existe."
+              },
+              "406": {
+                "description": "O request não pôde ser completado porque houve alguma inconsistência no body ou porque a operação no banco falhou."
               }
             },
             "parameters":[ {
               "name": "Post",
-              "description": "Objeto post a ser inserido no banco.",
+              "description": "Objeto post a ser inserido no banco contendo o username do usuário que fez o pedido.",
               "schema": {
-                "description": "Objeto post a ser inserido no banco.",
+                "description": "Objeto post a ser inserido no banco contendo o username do usuário que fez o pedido.",
                 "type": "object",
                 "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "author": {
+                    "type": "string"
+                  },
+                  "date": {
+                    "type": "string"
+                  },
                   "title": {
                     "type": "string"
                   },
@@ -95,7 +113,10 @@
                   }
                 },
                 "example": {
+                  "username": "user01",
                   "title": "Novo post",
+                  "author": "Autor teste",
+                  "date": "18/10/2021",
                   "subtitle": "Com uma legenda legal",
                   "body": "Lorem ipsum aqui, como corpo do post."
                 }
@@ -118,6 +139,12 @@
               "400": {
                 "description":"O request não pôde ser completado porque o body não foi preenchido ou foi preenchido incorretamente."
               },
+              "401": {
+                "description":"O request não pôde ser completado porque o usuário existe mas não possui autorização para continuar."
+              },
+              "404": {
+                "description":"O request não pôde ser completado porque o usuário não existe."
+              },
               "406": {
                 "description": "O request não pôde ser completado porque houve alguma inconsistência no body ou porque a operação no banco falhou."
               }
@@ -125,12 +152,21 @@
           },
           "parameters":[ {
             "name": "Post",
-            "description": "Objeto post a ser atualizado no banco.",
+            "description": "Objeto post a ser atualizado no banco contendo o username do usuário que está fazendo o pedido.",
             "schema": {
-              "description": "Objeto post a ser atualizado no banco.",
+              "description": "Objeto post a ser atualizado no banco contendo o username do usuário que está fazendo o pedido.",
               "type": "object",
               "properties": {
                 "post_id": {
+                  "type": "string"
+                },
+                "username": {
+                  "type": "string"
+                },
+                "author": {
+                  "type": "string"
+                },
+                "date": {
                   "type": "string"
                 },
                 "title": {
@@ -145,13 +181,58 @@
               },
               "example": {
                 "post_id": "0",
+                "username": "user01",
                 "title": "Título atualizado",
+                "author": "Auto atualizado",
+                "date": "18/10/2021",
                 "subtitle": "Legenda atualizada",
                 "body": "Corpo atualizado. Lembrando que o post_id não deve ser alterado, ou o update não será efetuado."
               }
             },
             "in": "body"
           } ]
+        },
+
+        "/posts/delete/{username}/{post_id}" : {
+          "delete": {
+            "summary":"Apaga um post a partir do post_id enviado no body do request.",
+            "produces": [
+              "application/json"
+            ],
+            "tags": ["Posts"],
+            "responses": {
+              "200": {
+                "description":"A requisição foi bem sucedida e o post foi apagado."
+              },
+              "400": {
+                "description":"O request não pôde ser completado porque o body não foi preenchido ou foi preenchido incorretamente."
+              },
+              "406": {
+                "description": "O request não pôde ser completado porque houve alguma inconsistência no body ou porque a operação no banco falhou."
+              }
+            }
+          },
+          "parameters":[ {
+            "name": "post_id",
+            "description": "post_id do post a ser apagado do banco.",
+            "schema": {
+              "description": "post_id do post a ser apagado do banco.",
+              "type": "string",
+              "example": "0"
+            },
+            "in": "path"
+          },
+          {
+            "name": "username",
+            "description": "Usuário que fez a requisição.",
+            "schema": {
+              "description": "Usuário que fez a requisição.",
+              "type": "string",
+              "example": "user01"
+            },
+            "in": "path"
+          }
+         ]
         },
 
         "/user/{username}": {
@@ -214,12 +295,16 @@
                   },
                   "favorites": {
                     "type": "array"
+                  },
+                  "role": {
+                    "type": "string"
                   }
                 },
                 "example": {
                   "_id": "0",
-                  "username": "user01",
-                  "favorites": []
+                  "username": "user02",
+                  "favorites": [],
+                  "role": "user"
                 }
               },
               "in": "body"
@@ -256,12 +341,16 @@
                   },
                   "favorites": {
                     "type": "array"
+                  },
+                  "role": {
+                    "type": "string"
                   }
                 },
                 "example": {
                   "_id": "0",
                   "username": "user01",
-                  "favorites": ["0", "1"]
+                  "favorites": ["0", "1"],
+                  "role": "user"
                 }
               },
               "in": "body"
